--- a/Encoder/wordembedding.ipynb
+++ b/Encoder/wordembedding.ipynb
@@ -2,13 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "609c01b2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([2, 4], dtype=torch.int32)\n",
+      "tensor([[[0.4958, 0.4058, 0.1182, 0.5791],\n",
+      "         [0.0496, 0.2688, 0.8308, 0.2501],\n",
+      "         [0.8285, 0.4376, 0.9953, 0.0588],\n",
+      "         [0.2969, 0.7258, 0.6915, 0.2288]],\n",
+      "\n",
+      "        [[0.1320, 0.4623, 0.4608, 0.3693],\n",
+      "         [0.0656, 0.2772, 0.3697, 0.7058],\n",
+      "         [0.5381, 0.8132, 0.0411, 0.1388],\n",
+      "         [0.9907, 0.0395, 0.6499, 0.4306]]])\n",
+      "tensor([[[0.4958, 0.4058,   -inf,   -inf],\n",
+      "         [0.0496, 0.2688,   -inf,   -inf],\n",
+      "         [  -inf,   -inf,   -inf,   -inf],\n",
+      "         [  -inf,   -inf,   -inf,   -inf]],\n",
+      "\n",
+      "        [[0.1320, 0.4623, 0.4608, 0.3693],\n",
+      "         [0.0656, 0.2772, 0.3697, 0.7058],\n",
+      "         [0.5381, 0.8132, 0.0411, 0.1388],\n",
+      "         [0.9907, 0.0395, 0.6499, 0.4306]]])\n",
+      "tensor([[[0.5225, 0.4775, 0.0000, 0.0000],\n",
+      "         [0.4454, 0.5546, 0.0000, 0.0000],\n",
+      "         [   nan,    nan,    nan,    nan],\n",
+      "         [   nan,    nan,    nan,    nan]],\n",
+      "\n",
+      "        [[0.1981, 0.2756, 0.2752, 0.2511],\n",
+      "         [0.1822, 0.2252, 0.2470, 0.3456],\n",
+      "         [0.2781, 0.3662, 0.1692, 0.1865],\n",
+      "         [0.3747, 0.1447, 0.2665, 0.2140]]])\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
-    "import numpy\n",
+    "import numpy as np\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "\n",
@@ -29,8 +64,8 @@
     "tgt_len = torch.Tensor([4, 3]).to(torch.int32)  # 目标序列长度\n",
     "\n",
     "# 以单词索引构成的源句子和目标句子，构建batch，并且做了padding，默认值为0\n",
-    "src_seq = torch.cat([torch.unsqueeze(F.pad(torch.randint(1, max_num_src_words, (L,)), (0, max_src_seq_len-L)), 0) for L in src_len])\n",
-    "tgt_seq = torch.cat([torch.unsqueeze(F.pad(torch.randint(1, max_num_tgt_words, (L,)), (0, max_tgt_seq_len-L)), 0) for L in tgt_len])\n",
+    "src_seq = torch.cat([torch.unsqueeze(F.pad(torch.randint(1, max_num_src_words, (L,)), (0, max(src_len)-L)), 0) for L in src_len])\n",
+    "tgt_seq = torch.cat([torch.unsqueeze(F.pad(torch.randint(1, max_num_tgt_words, (L,)), (0, max(tgt_len)-L)), 0) for L in tgt_len])\n",
     "\n",
     "# 构造word embedding 第0行：padding的embedding\n",
     "src_embedding_table = nn.Embedding(max_num_src_words+1, model_dim)\n",
@@ -56,8 +91,25 @@
     "# 构造每个位置的位置embedding\n",
     "src_pe_embedding = pe_embedding(src_pos)  \n",
     "tgt_pe_embedding = pe_embedding(tgt_pos)\n",
-    "print(src_pe_embedding)\n",
-    "print(tgt_pe_embedding)"
+    "\n",
+    "# 构造encoder的self-attention mask，保证注意力不会分配给padding的部分\n",
+    "# mask的shape：[batch_size, max_src_len, max_src_len]，值为1或-inf\n",
+    "vaild_encoder_pos = torch.unsqueeze(torch.cat([torch.unsqueeze(F.pad(torch.ones(L), (0, max(src_len)-L)), 0) for L in src_len]), 2)\n",
+    "vaild_encoder_pos_matrix = torch.bmm(vaild_encoder_pos, vaild_encoder_pos.transpose(1, 2))\n",
+    "invalid_encoder_pos_matrix = 1 - vaild_encoder_pos_matrix\n",
+    "mask_encoder_self_attention = invalid_encoder_pos_matrix.to(torch.bool)\n",
+    "\n",
+    "# 模拟encoder的self-attention score\n",
+    "score = torch.rand((batch_size, max(src_len), max(src_len)))\n",
+    "\n",
+    "masked_score = score.masked_fill(mask_encoder_self_attention, -np.inf)\n",
+    "prob = F.softmax(masked_score, -1)\n",
+    "\n",
+    "print(src_len)\n",
+    "print(score)\n",
+    "print(masked_score)\n",
+    "print(prob)\n",
+    "\n"
    ]
   }
  ],
